assets/product-details.css
/* ... */
.modal-dialog-scrollable .modal-dialog{
    overflow-y: initial !important
}

.modal-dialog-scrollable .modal-body .bundle-offer-products{
    max-height: calc(100vh - 120px);
    overflow-y: auto;
}

.bundle-offer-title {
    unicode-bidi: isolate;
}

.bundle-offer-products-dialog .bundle-offer-title, .bundle-offer-products-dialog .bundle-offer-title-description {
    margin-right: 40px;
}

.rtl .bundle-offer-products-dialog .bundle-offer-title, .rtl .bundle-offer-products-dialog .bundle-offer-title-description {
    margin-right: 0px;
    margin-left: 40px;
}

.description-text-clear *{
    max-width: 100% !important;
}

.bundle-offer-details-products {
    overflow-x: visible;
    flex-wrap: wrap;
}

.form-notify-me {
    border: 1px solid var( --primary-color);
    padding: 15px;
    border-radius: 3px;
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.form-notify-me-phone-row {
    display: flex;
    gap: 20px;
    direction: ltr;
}

.form-notify-me-phone-row > input:first-child {
    max-width: 80px;
}


.form-notify-me-submit-button-row {
    display: flex;
    justify-content: end;
}

.btn-send-notify {
    margin-left: 15px;
    width: 100px;
    height: 40px;
}

.rtl .btn-send-notify {
    margin-left: unset;
    margin-right: 15px;
}

.products-details-page .slick-dots {
    display: none !important;
}

.products-details-page .slick-dots li button {
    -webkit-appearance: none;
    appearance: none;
    background: #ccc;
    border: none;
    border-radius: 50%;
    width: 12px;
    height: 12px;
    cursor: pointer;
    margin: 0 3px;
}

.products-details-page .slick-dots li.slick-active button {
    background: var(--primary-color);
}

.products-details-page .slick-arrow {
    background-color: rgba(204,204,204,0.7);
    border-radius: 50%;
    z-index: 2;
    opacity: 0.5;
}

.products-details-page .slick-next.slick-arrow>span,
.products-details-page .slick-prev.slick-arrow>span {
    color: #ffffff;
}

.products-details-page .slick-prev
{
    left: 0px;
}
[dir='rtl'] .products-details-page .slick-prev
{
    right:  0px;
    left: auto;
}


.products-details-page .slick-next
{
    right: 0px;
}

[dir='rtl'] .products-details-page .slick-next
{
    right: auto;
    left: 0px;
}

.col-product-info {
    padding-top: 0px;
}

.col-product-info-single-image {
    padding-top: 0px;
}

.col-product-image-wrapper {
    padding-right: 15px;
    padding-left: 15px;
}

#product-custom-user-input-fields .file-label {
    margin-bottom: 0px;
}

#product-custom-user-input-fields .icon-close::after {
    font-family: 'icomoon' !important;
    content: "\f05c";
    font-size: 18px;
    cursor: pointer;
}

#product-custom-user-input-fields .file-label > * {
    margin-right: 10px;
}

.rtl #product-custom-user-input-fields .file-label > * {
    margin-right: unset;
    margin-left: 10px;
}

@media only screen and (max-width: 768px) {

    .user-review-text {
        margin-left: 0px !important;
        margin-right: 0px !important;
    }

    .card-review .review-images-container {
        margin-left: 0px !important;
        margin-right: 0px !important;
    }

    .card-review .review-reply-card {
        margin-left: 0px !important;
        margin-right: 0px !important;
    }
    

    .description-paragrah {
        margin: 0px !important;
    }

    .card-table {
        margin: 0px 0px 10px 0px !important;
    }

    .options-table .col {
        flex-basis: unset;
    }

    .description-title {
        margin-left: 20px;
    }

    .rtl .description-title {
        margin-left: unset;
        margin-right: 20px;
    }

    .bundle-offer-details-products {
        overflow-x: scroll;
        flex-wrap: nowrap;
    }

    .add-review-btn {
        margin-left: auto;
    }

    .rtl .add-review-btn{
        margin-left: unset;
        margin-right: auto;
    }

    .products-details-page .lg-thumbs {
        display: none;
    }

    .products-details-page .slick-dots {
        display: block !important;
    }

    .products-details-page .products-details {
        margin-top: 0px;
    }

    .col-product-info {
        padding-top: 45px;
    }

    .col-product-info-single-image {
        padding-top: 25px;
    }

    .col-product-image-wrapper {
        padding: 0px;
    }

    .products-details-page .slick-arrow {
        display: none !important;
    }
}

.product-images-carousel-init {
    overflow: hidden;
}

.size-box #product-variants-options ul {
    list-style: none;
    margin: 0px;
    padding: 0px;
}

.size-box #product-variants-options ul li {
    width: auto;
    padding: 5px  10px;
    margin-right: 10px;
    cursor: pointer;
    border: 1px solid #efefef;
    text-align: center;
    margin-bottom: 10px;
    display: inline-block;
}

.rtl .size-box #product-variants-options ul li {
    margin-right: 0px;
    margin-left: 10px;
}

.size-box #product-variants-options ul li a {
    color: #222222;
    font-size: 18px;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}

.size-box #product-variants-options ul li.active {
    border: 1px solid var( --primary-color);
    color: var( --primary-color);
}

.tabby-product-widget .tabby-promo-snippet {
    font-family: inherit;
}

.all-reviews-btn {
    background-color: transparent;
    color: var( --primary-color);
    text-decoration: underline;
    padding-left: 0px;
    padding-right: 0px;
}

.products-reviews-page .product-image {
    width: 150px;
    height: auto;
    margin-right: 15px;
    object-fit: contain;
    max-height: 180px;
}

.rtl .products-reviews-page .product-image {
    margin-right: 0px;
    margin-left: 15px;
}

.footer-sticky {
    display: block;
    bottom: 0;
    left: 0;
    position: -webkit-sticky;
    position: sticky;
    padding: 0px 20px;
    padding-bottom: calc(0px + env(safe-area-inset-bottom));
    width: 100%;
    background-color: #f9f9f9;
    box-shadow: 0 0 10px rgb(0 0 0 / 20%);
    -webkit-transform: translateZ(0);
}
/* ... */

